# citadel

./: .gitignore  CMakeLists.txt
citadel_cmd/: CMakeLists.txt  citadel_cmd.cpp
citadel_lib/: CMakeLists.txt  CPPLINT.cfg  FindCitadelLib.cmake
citadel_lib/include/citadel/: building.hpp  character.hpp  deck.hpp  game.hpp  player.hpp
citadel_lib/source/: building.cpp  character.cpp  deck.cpp  game.cpp  game_factory.cpp  player.cpp
